--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "NodeJs Express App",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
