--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "full": "concurrently \"npm run server\" \"npm run client\"",
     "dev": "nodemon server.js",
     "prod": "cross-env NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
@@ -41,6 +44,7 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "concurrently": "^5.2.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
