--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,6 @@
     "autoprefixer": "^9.8.0",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
